Anyadir el meu nom

--- a/include/RubenSantacatalinaPellicer.html
+++ b/include/RubenSantacatalinaPellicer.html
@@ -14,7 +14,7 @@
 	</div>
 		<div id="principal">		
 		<figure>
-			<img src="../img/alumne01.jpg" alt="git" class="imatgealumne" />
+			<img src="../img/ImatgeRuben.gif" alt="git" class="imatgealumne" />
 		</figure>
 		<a href="../index.html">Torna a l'inici</a>
 	</div>
