--- a/include/exemplePaginaAlumne.html
+++ b/include/exemplePaginaAlumne.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8"/>
   <title>Pàgina de l'alumne 01</title>
-  <link rel="stylesheet" href="../css/estils.css">
+  <link rel="stylesheet" href="../../css/estils.css">
 </head>
 
 <body>
