--- a/include/ruben/Apartat1Ruben.html
+++ b/include/ruben/Apartat1Ruben.html
@@ -5,6 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-  <img src="img/cabra.jpg">
+  <img src="../../img/cabra.jpg">
 </body>
 </html>
