--- a/include/ruben/RubenSantacatalinaPellicer.html
+++ b/include/ruben/RubenSantacatalinaPellicer.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8"/>
   <title>Pàgina de Ruben</title>
-  <link rel="stylesheet" href="../css/estils.css">
+  <link rel="stylesheet" href="../../css/estils.css">
 </head>
 
 <body>
@@ -14,8 +14,8 @@
 	</div>
 		<div id="principal">	
 	<ul>	
-	<li><a href="./Apartat1Ruben.html">Antuan1</a></li>
-	<li><a href="./Apartat2Ruben.html">Antuan2</a></li>
+	<li><a href="./Apartat1Ruben.html">Ruben</a></li>
+	<li><a href="./Apartat2Ruben.html">Ruben</a></li>
 	</ul>
 		<figure>
 			<img src="../img/alumne01.jpg" alt="git" class="imatgealumne" />
