--- a/include/exemplePaginaAlumne.html
+++ b/include/exemplePaginaAlumne.html
@@ -16,7 +16,7 @@
 		<figure>
 			<img src="../img/alumne01.jpg" alt="git" class="imatgealumne" />
 		</figure>
-		<a href="../index.html">Torna a l'inici</a>
+		<a href="../../index.html">Torna a l'inici</a>
 	</div>
 	<div id="peu">
 		<h3>Entorns de Desenvolupament</h3>
