No volvia al inicio

--- a/include/ruben/RubenSantacatalinaPellicer.html
+++ b/include/ruben/RubenSantacatalinaPellicer.html
@@ -14,13 +14,13 @@
 	</div>
 		<div id="principal">	
 	<ul>	
-	<li><a href="./Apartat1Ruben.html">Ruben</a></li>
-	<li><a href="./Apartat2Ruben.html">Ruben</a></li>
+	<li><a href="./Apartat1Ruben.html">Ruben1</a></li>
+	<li><a href="./Apartat2Ruben.html">Ruben2</a></li>
 	</ul>
 		<figure>
 			<img src="../img/alumne01.jpg" alt="git" class="imatgealumne" />
 		</figure>
-		<a href="../index.html">Torna a l'inici</a>
+		<a href="../../index.html">Torna a l'inici</a>
 	</div>
 	<div id="peu">
 		<h3>Entorns de Desenvolupament</h3>
