Tocar cosas que me ha dicho Antuan del suyo

--- a/include/antuan/paginaAntuan.html
+++ b/include/antuan/paginaAntuan.html
@@ -12,6 +12,7 @@
 	<div id="cap">
 		<h1>Alumne 02</h1>		
 	</div>
+	<div id="principal">
 	<ul>
 	<li><a href="./Apartat1Antuan.html">Antuan1</a></li>
 	<li><a href="./Apartat2Antuan.html">Antuan2</a></li>
