Tocar mi imagen porque no me iba

--- a/include/ruben/RubenSantacatalinaPellicer.html
+++ b/include/ruben/RubenSantacatalinaPellicer.html
@@ -18,7 +18,7 @@
 	<li><a href="./Apartat2Ruben.html">Ruben2</a></li>
 	</ul>
 		<figure>
-			<img src="../../img/alumne01.jpg" alt="git" class="imatgealumne" style="max-width: 300px;" />
+			<img src="../../img/git.jpg" alt="git" class="imatgealumne" style="max-width: 300px;" />
 		</figure>
 		<a href="../../index.html">Torna a l'inici</a>
 	</div>
