--- a/include/lidia/apartado1Lidia.html
+++ b/include/lidia/apartado1Lidia.html
@@ -10,17 +10,15 @@
 <body>
   <div id="contenidor">
 	<div id="cap">
-		<h1>Alumne 03</h1>		
+		<h1>Alumne 01</h1>		
 	</div>
 		<div id="principal">		
 		<figure>
-			<img src="../../img/lidia.jpg" alt="git" class="imatgealumne" />
-        </figure>
-
-        <a href="./apartado1Lidia.html">Lidia1</a>
+			<img src="../../img/lidia1.gif" alt="git" class="imatgealumne" />
+		</figure>
         <a href="./apartado2Lidia.html">Lidia2</a>
-        
 		<a href="../../index.html">Torna a l'inici</a>
+
 	</div>
 	<div id="peu">
 		<h3>Entorns de Desenvolupament</h3>
