--- a/include/lidia/lidiamaria.html
+++ b/include/lidia/lidiamaria.html
@@ -15,8 +15,11 @@
         <div id="principal">
         <figure>
             <img src="../../img/lidia.gif" alt="git" class="imatgealumne" />
+
         </figure>
 
+        <a href="./apartado1Lidia.html">Lidia1</a>
+        <a href="./apartado2Lidia.html">Lidia2</a>
 
         <a href="../../index.html">Torna a l'inici</a>
     </div>
