Apartat Mitologia creat

--- a/include/alejandro/alejandro01.html
+++ b/include/alejandro/alejandro01.html
@@ -14,9 +14,8 @@
 	</div>
 		<div id="principal">		
 		<figure>
-			<img src="../../img/alejandro.webp" alt="git" class="imatgealumne" />
+			<img src="../../img/alejandro01.webp" alt="git" class="imatgealumne" />
 		</figure>
-		<a href="alejandro01.html">Alejandro01</a>
 		<a href="alejandro02.html">Alejandro02</a>
 		<a href="../../index.html">Torna a l'inici</a>
 	</div>
