--- a/include/alejandro/alejandro02.html
+++ b/include/alejandro/alejandro02.html
@@ -14,10 +14,9 @@
 	</div>
 		<div id="principal">		
 		<figure>
-			<img src="../../img/alejandro.webp" alt="git" class="imatgealumne" />
+			<img src="../../img/alejandro02.webp" alt="git" class="imatgealumne" />
 		</figure>
 		<a href="alejandro01.html">Alejandro01</a>
-		<a href="alejandro02.html">Alejandro02</a>
 		<a href="../../index.html">Torna a l'inici</a>
 	</div>
 	<div id="peu">
